--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,42 +1,81 @@
 version: '3.8'
 
 services:
+  # PostgreSQL for users-service
+  users-db:
+    container_name: users-db
+    image: postgres:16
+    env_file:
+      - ./arkive-backend/users-service/.env
+    environment:
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+    ports:
+      - "5433:5432"
+    volumes:
+      - users-db-data:/var/lib/postgresql/data
+    networks:
+      - backend
+
+  # Users Service
   users-service:
+    container_name: users-service
     build: ./arkive-backend/users-service
     ports:
       - "5000:5000"
+    env_file:
+      - ./arkive-backend/users-service/.env
+    depends_on:
+      - users-db
+    networks:
+      - backend
 
+  # Other backend services (add container_name if needed)
   auth-service:
+    container_name: auth-service
     build: ./arkive-backend/auth-service
     ports:
       - "8081:8080"
     profiles: ["dev"]
 
   documents-service:
+    container_name: documents-service
     build: ./arkive-backend/documents-service
     ports:
       - "8082:8080"
     profiles: ["dev"]
 
   storage-service:
+    container_name: storage-service
     build: ./arkive-backend/storage-service
     ports:
       - "8001:8000"
     profiles: ["dev"]
 
   translation-service:
+    container_name: translation-service
     build: ./arkive-backend/translation-service
     ports:
       - "8002:8000"
     profiles: ["dev"]
 
   gateway-api:
+    container_name: gateway-api
     build: ./arkive-backend/gateway-api
     ports:
       - "8003:8000"
     profiles: ["dev"]
 
+  # Frontend
   frontend:
+    container_name: frontend
     build: ./arkive-dms
     ports:
       - "3000:3000"
+
+volumes:
+  users-db-data:
+
+networks:
+  backend:
