--- a/arkive-backend/users-service/Dockerfile
+++ b/arkive-backend/users-service/Dockerfile
@@ -8,6 +8,7 @@ RUN pip install -r requirements.txt
 COPY . .
 
 ENV FLASK_APP=app.py
+ENV FLASK_ENV=development
 ENV FLASK_RUN_HOST=0.0.0.0
 
 CMD ["flask", "run", "--host=0.0.0.0", "--port=5000"]
