--- a/arkive-backend/auth-service/build.gradle
+++ b/arkive-backend/auth-service/build.gradle
@@ -26,7 +26,8 @@ repositories {
 dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
-	implementation 'javax.servlet:javax.servlet-api:4.0.1'
+implementation 'jakarta.servlet:jakarta.servlet-api:6.0.0'
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
