--- a/arkive-backend/documents-service/src/main/resources/application.properties
+++ b/arkive-backend/documents-service/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# JPA config
+# JPA confige
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
