--- a/arkive-backend/storage-service/src/main/resources/application.properties
+++ b/arkive-backend/storage-service/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+server.port=8080
 spring.application.name=storage-service
+
+# Maximum file size
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+# MinIO configuration
+minio.endpoint=http://minio:9000
+minio.accessKey=minioadmin
+minio.secretKey=minioadmin
+minio.bucketName=arkive-documents
