--- a/arkive-backend/storage-service/src/main/resources/application.properties
+++ b/arkive-backend/storage-service/src/main/resources/application.properties
@@ -1,12 +1,13 @@
-server.port=8080
-spring.application.name=storage-service
+# Server Configuration
+server.port=${SERVER_PORT:8080}
+spring.application.name=${SPRING_APPLICATION_NAME:storage-service}
 
-# Maximum file size
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=10MB
+# File upload limits
+spring.servlet.multipart.max-file-size=${SPRING_SERVLET_MULTIPART_MAX_FILE_SIZE:50MB}
+spring.servlet.multipart.max-request-size=${SPRING_SERVLET_MULTIPART_MAX_REQUEST_SIZE:50MB}
 
-# MinIO configuration
-minio.endpoint=http://minio:9000
-minio.accessKey=minioadmin
-minio.secretKey=minioadmin
-minio.bucketName=arkive-documents
+# MinIO Configuration
+minio.endpoint=${MINIO_ENDPOINT:http://localhost:9000}
+minio.accessKey=${MINIO_ACCESS_KEY:minioadmin}
+minio.secretKey=${MINIO_SECRET_KEY:minioadmin}
+minio.bucketName=${MINIO_BUCKET_NAME:arkive-documents}
