--- a/arkive-backend/documents-service/src/main/resources/application.properties
+++ b/arkive-backend/documents-service/src/main/resources/application.properties
@@ -1,14 +1,21 @@
-server.port=8080
+# Server Configuration
+server.port=${SERVER_PORT:8080}
+spring.application.name=${SPRING_APPLICATION_NAME:documents-service}
 
-spring.application.name=documents-service
-
-# PostgreSQL DB config
-spring.datasource.url=jdbc:postgresql://documents-db:5432/documents-db
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+# Database Configuration
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://documents-db:5432/documents-db}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:postgres}
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO:update}
 
-# JPA confige
-spring.jpa.hibernate.ddl-auto=update
+# Spring Web Multipart (file upload) settings
+spring.servlet.multipart.max-file-size=${SPRING_SERVLET_MULTIPART_MAX_FILE_SIZE:50MB}
+spring.servlet.multipart.max-request-size=${SPRING_SERVLET_MULTIPART_MAX_REQUEST_SIZE:50MB}
+
+# Storage Service Configuration
+storage.service.url=${STORAGE_SERVICE_URL:http://storage-service:8080}
+
+# JPA config
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
