--- a/arkive-backend/users-service/.env.example
+++ b/arkive-backend/users-service/.env.example
@@ -1,6 +1,26 @@
-DATABASE_URL=postgresql://postgres:postgres@<db_name>:<db_port>/<db_name>
-POSTGRES_DB=<db_name>
-POSTGRES_USER=<db_user>
-POSTGRES_PASSWORD=<db_password>
-POSTGRES_HOST=<db_host>
-POSTGRES_PORT=<db_port>
+# Flask Configuration
+FLASK_APP=app.py
+FLASK_ENV=development
+FLASK_DEBUG=True
+SECRET_KEY=your-super-secret-key-change-this-in-production
+
+# Database Configuration
+DATABASE_URL=postgresql://postgres:postgres@users-db:5432/users-db
+
+# JWT Configuration
+JWT_SECRET_KEY=your-jwt-secret-key-change-this-in-production
+JWT_ACCESS_TOKEN_EXPIRES=900
+JWT_REFRESH_TOKEN_EXPIRES=7776000
+
+# Redis Configuration (for JWT blacklist)
+REDIS_URL=redis://redis:6379/0
+
+# Server Configuration
+HOST=0.0.0.0
+PORT=5000
+
+# CORS Configuration
+CORS_ORIGINS=http://localhost:3000,http://localhost:3001,http://localhost:8000
+
+# Logging
+LOG_LEVEL=INFO
